nginx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
        name: nginx-test
spec:
        replicas: 3
        selector:
                matchLabels:
                        component: nginx
        template:
                metadata:
                        labels:
                                component: nginx
                spec:
                        containers:
                                - name: test-api
                                  image: nginx
                                  ports:
                                          - containerPort: 80
