nginx-service.yml
apiVersion: v1
kind: Service
metadata:
        name: service-nginx
spec:
        type: ClusterIP
        ports:
              - port: 80
                targetPort: 80
        selector:
                component: nginx
