test-service.yaml
apiVersion: v1
kind: Service
metadata:
        name: test-api-service
spec:
        type: ClusterIP
        ports:
                - port: 3000
                  targetPort: 3000
        selector:
                component: test-api
