ingress-service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
        name: service-ingress
        annotations:
                kubernetes.io/ingress.class: nginx
                nginx.ingress.kubernetes.io/rewrite-target: /
spec:
        rules:
             - http:
                paths:
                        - path: /
                          backend:
                                  serviceName: test-api-service
                                  servicePort: 3000
                        - path: /api/
                          backend:
                                  serviceName: service-nginx
                                  servicePort: 80
